service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tamagotchi
spec:
  ports:
    - name: http
      port: 5000
      targetPort: http
      protocol: TCP
