ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tamagotchi
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: public
  tls:
    - hosts:
        - tamagotchi.kennedn.com
      secretName: tamagotchi-cert
  rules:
    - host: tamagotchi.kennedn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tamagotchi
                port:
                  number: 5000
